google oauth problem solving

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 node_modules/
 
 # Generated scripts and data files (remove leading dots — they were incorrect)
-generateShops.js
-generateProducts.js
+# generateShops.js
+# generateProducts.js
 
-# Common project data files
-products.json
-shops.json
+# # Common project data files
+# products.json
+# shops.json
